# InternalTestingFramework

./: .gitignore  CMakeLists.txt  README.md
include/: communicationManager.hpp  latencyMainClass.hpp  parameterHandling.hpp  timeSppport.hpp
src/: latencyMainClass.cxx  main.cxx  timeSppport.cxx
src/runTime/: commandParameterHanding.cxx  commandParameterHanding.hpp  parameterHanding.cxx  parameterHandling.cxx  timeSupport.cxx
src/vendorImpl/: rtiDdsImpl.cxx  rtiDdsImpl.hpp
src/vendorImpl/rti/: rtiDdsImpl.cxx  rtiDdsImpl.hpp
srcData/: test.cxx  test.hpp  testPlugin.cxx  testPlugin.hpp
srcData/rti/: README_x64Linux4gcc7.3.0.txt  makefile_test_x64Linux4gcc7.3.0  test.cxx  test.hpp  test.idl  testPlugin.cxx  testPlugin.hpp  test_publisher.cxx  test_subscriber.cxx
test/commandParameterHanding_test/: CMakeLists.txt  build.sh  commandParameterHanding_test_main.cxx
test/communicationManager_test/: CMakeLists.txt  build.bat  communicationManager_test_main.cxx
test/latencyMainClass_test/: CMakeLists.txt  build.sh  latencyMainClass_test_main.cxx
test/timeSupport/: CMakeLists.txt  time_support_test_main.cxx
test/timeSupport_test/: CMakeLists.txt  build.bat  build.sh  time_support_test_main.cxx
